<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".FormShow">

    <TextView
        android:id="@+id/tv_edad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/firasansbold"
        android:text="@string/Edad"
        android:textAllCaps="false"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        app:layout_constraintStart_toStartOf="@+id/tv_edad"
        app:layout_constraintTop_toBottomOf="@+id/tv_edad" />

    <TextView
        android:id="@+id/tv_signozodiacal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif"
        android:text="@string/SignoZodiacal2"
        android:textAllCaps="false"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        app:layout_constraintStart_toStartOf="@+id/tv_signozodiacal"
        app:layout_constraintTop_toBottomOf="@+id/tv_signozodiacal" />

    <TextView
        android:id="@+id/tv_signozodiacalchino2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif"
        android:text="@string/SignoChino2"
        android:textAllCaps="false"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        app:layout_constraintStart_toStartOf="@+id/tv_signozodiacalchino"
        app:layout_constraintTop_toBottomOf="@+id/tv_signozodiacalchino" />

    <TextView
        android:id="@+id/tv_correo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif"
        android:text="@string/Correo"
        android:textAllCaps="false"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        app:layout_constraintStart_toStartOf="@+id/tv_correo"
        app:layout_constraintTop_toBottomOf="@+id/tv_correo" />

    <TextView
        android:id="@+id/tv_numCuenta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif"
        android:text="@string/NumCuenta"
        android:textAllCaps="false"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        app:layout_constraintStart_toStartOf="@+id/tv_numCuenta"
        app:layout_constraintTop_toBottomOf="@+id/tv_numCuenta" />

    <TextView
        android:id="@+id/tv_nombrecompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="184dp"
        android:fontFamily="@font/firasansbold"
        android:text="@string/NombreCompleto"
        android:textAllCaps="false"
        android:textColor="@color/color_form_normal"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombrecompleto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/firasansbold"
        android:text="@string/NombreCompleto"
        android:textAllCaps="false"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        app:layout_constraintStart_toStartOf="@+id/tv_nombrecompleto"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombrecompleto" />

    <TextView
        android:id="@+id/tv_signozodiacal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/firasansbold"
        android:text="@string/SignoZodiacal2"
        android:textColor="@color/color_form_normal"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_edad2"
        app:layout_constraintTop_toBottomOf="@+id/tv_edad2" />

    <TextView
        android:id="@+id/tv_signozodiacalchino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/firasansbold"
        android:text="@string/SignoChino2"
        android:textColor="@color/color_form_normal"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_signozodiacal2"
        app:layout_constraintTop_toBottomOf="@+id/tv_signozodiacal2" />

    <TextView
        android:id="@+id/tv_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/firasansbold"
        android:text="@string/Correo"
        android:textColor="@color/color_form_normal"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_signozodiacalchino2"
        app:layout_constraintTop_toBottomOf="@+id/tv_signozodiacalchino2" />

    <TextView
        android:id="@+id/tv_numCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/firasansbold"

        android:text="@string/NumCuenta"
        android:textColor="@color/color_form_normal"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_correo2"
        app:layout_constraintTop_toBottomOf="@+id/tv_correo2" />

    <TextView
        android:id="@+id/tv_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/firasansbold"
        android:text="@string/Edad"
        android:textColor="@color/color_form_normal"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_nombrecompleto2"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombrecompleto2" />


    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="137dp"
        android:layout_height="52dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/color_btn"
        android:fontFamily="@font/firasansbold"
        android:onClick="Regresar_click"
        android:text="@string/Regresar"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/iv_carrera"
        android:layout_width="205dp"
        android:layout_height="162dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438"
        tools:srcCompat="@tools:sample/avatars" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView3"
        android:layout_width="224dp"
        android:layout_height="180dp"
        android:src="@drawable/loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>