<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/firasandsextrabold"
        android:text="@string/Nombre"
        android:textAllCaps="false"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/tv_Apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/firasandsextrabold"
        android:text="@string/Apellidos"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_Nombre"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <TextView
        android:id="@+id/tv_NumCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/firasandsextrabold"
        android:text="@string/NumCuenta"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_Apellidos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:background="@color/color_form_box"
        android:backgroundTint="@color/color_form_box"
        android:fontFamily="@font/firasandsextrabold"
        android:textColor="@color/white"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_Carrera"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView3"
        android:layout_width="189dp"
        android:layout_height="134dp"
        android:src="@drawable/loading2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/tv_Carrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/firasandsextrabold"
        android:text="@string/Carrera"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_Correo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <Button
        android:id="@+id/btn_continuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_btn"
        android:fontFamily="@font/firasandsextrabold"
        android:onClick="Continuar_click"
        android:text="@string/Continuar"
        android:textSize="@dimen/btnSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

    <EditText
        android:id="@+id/et_Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="@color/color_form_box"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_nombre"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_NumCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_form_box"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_NumCuenta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_Apellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:background="@color/color_form_box"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_Apellidos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_Date"
        android:layout_width="160dp"
        android:layout_height="25dp"
        android:background="@color/color_form_box"
        android:ems="10"
        android:enabled="false"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_FechaNacimiento"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_Correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/firasandsextrabold"
        android:text="@string/Correo"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_Date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />

    <ImageView
        android:id="@+id/iv_Calendario"
        android:layout_width="31dp"
        android:layout_height="25dp"
        android:onClick="Calendario_click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668"
        app:srcCompat="@drawable/calendar" />

    <TextView
        android:id="@+id/tv_FechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/firasandsextrabold"
        android:text="@string/FechaNacimiento"
        android:textColor="@color/color_btn"
        android:textSize="@dimen/textViewSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_NumCuenta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <EditText
        android:id="@+id/et_Correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:background="@color/color_form_box"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_Correo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.782"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>